GNOME Bugzilla – Bug 754621
Missing include in src/wayland/meta-xwayland-selection.c
Last modified: 2015-09-07 13:16:24 UTC
Created attachment 310728 [details] [review] Add missing include This is the compilation error: CC wayland/meta-wayland-pointer-gesture-pinch.lo wayland/meta-xwayland-selection.c: In function 'meta_xwayland_selection_handle_xfixes_selection_notify': wayland/meta-xwayland-selection.c:1363:3: error: unknown type name 'XFixesSelectionNotifyEvent' XFixesSelectionNotifyEvent *event = (XFixesSelectionNotifyEvent *) xevent; ^ wayland/meta-xwayland-selection.c:1363:40: error: 'XFixesSelectionNotifyEvent' undeclared (first use in this function) XFixesSelectionNotifyEvent *event = (XFixesSelectionNotifyEvent *) xevent; ^ wayland/meta-xwayland-selection.c:1363:40: note: each undeclared identifier is reported only once for each function it appears in wayland/meta-xwayland-selection.c:1363:68: error: expected expression before ')' token XFixesSelectionNotifyEvent *event = (XFixesSelectionNotifyEvent *) xevent; ^
Review of attachment 310728 [details] [review]: Looks good to me.
Review of attachment 310728 [details] [review]: The only comment I have is missing bugzilla address in the commit body, and the commit subject should probably be "xwayland: Add missing include" or something short like that.
Created attachment 310747 [details] [review] xwayland: Add missing include
Review of attachment 310747 [details] [review]: Looks good to me.
Review of attachment 310747 [details] [review]: commit 6ea7fa99736373b1a4ca8d089c5f214650cd4e3c Thanks for the review