xwayland: Add missing include

https://bugzilla.gnome.org/show_bug.cgi?id=754621