src/wayland/meta-xwayland-selection.c
@@ -33,6 +33,7 @@
 #include <gio/gunixinputstream.h>
 #include <gdk/gdkx.h>
 #include <X11/Xatom.h>
+#include <X11/extensions/Xfixes.h>
 #include <meta/errors.h>
 #include "meta-xwayland-private.h"
 #include "meta-xwayland-selection-private.h"
